--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://PaigeD1301.github.io/tint-shade-generator",
+  "homepage": ".",
   "name": "tint-shade-generator",
   "version": "0.1.0",
   "private": true,
